# PixivArchive

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  artwork.rs  comment.rs  config.rs  favorite.rs  file.rs  main.rs  series.rs  tag.rs  user.rs
