[package]
name = "pixiv-archive"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["env", "derive"] }
clap-verbosity-flag = "3.0.3"
console = "0.16.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
fast_image_resize = { version = "5.2.0", features = ["image"] }
futures = "0.3.31"
image = "0.25.6"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
itertools = "0.14.0"
log = "0.4.27"
mime2ext = "0.1.54"
mime_guess = "2.0.5"
post-archiver = { version = "0.4.5", features = ["importer"] }
post-archiver-utils = "0.0.3"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["native-tls-alpn"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_repr = "0.1.20"
serde_with = "3.14.0"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["macros", "rt"] }
